@@ -1,140 +1,100 @@
 package dk.kvalitetsit.hjemmebehandling.controller;
 
-import dk.kvalitetsit.hjemmebehandling.api.*;
+import dk.kvalitetsit.hjemmebehandling.api.DtoMapper;
 import dk.kvalitetsit.hjemmebehandling.client.CustomUserClient;
-import dk.kvalitetsit.hjemmebehandling.controller.exception.ForbiddenException;
 import dk.kvalitetsit.hjemmebehandling.controller.exception.InternalServerErrorException;
 import dk.kvalitetsit.hjemmebehandling.controller.exception.ResourceNotFoundException;
-import dk.kvalitetsit.hjemmebehandling.model.CarePlanModel;
+import dk.kvalitetsit.hjemmebehandling.model.CPR;
 import dk.kvalitetsit.hjemmebehandling.model.PatientModel;
-import dk.kvalitetsit.hjemmebehandling.service.AuditLoggingService;
 import dk.kvalitetsit.hjemmebehandling.service.PatientService;
 import dk.kvalitetsit.hjemmebehandling.service.exception.AccessValidationException;
 import dk.kvalitetsit.hjemmebehandling.service.exception.ServiceException;
+import dk.kvalitetsit.hjemmebehandling.service.logging.AuditLoggingService;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
+import org.openapitools.model.CreatePatientRequest;
+import org.openapitools.model.PatientDto;
+import org.openapitools.model.PatientListResponse;
 
 import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static dk.kvalitetsit.hjemmebehandling.service.Constants.CPR_1;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 @ExtendWith(MockitoExtension.class)
 public class PatientControllerTest {
-  @InjectMocks
-  private PatientController subject;
 
-  @Mock
-  private PatientService patientService;
-  @Mock
-  private AuditLoggingService auditLoggingService;
-  @Mock
-  private DtoMapper dtoMapper;
-  @Mock
-  private CustomUserClient customUserClient;
+    @InjectMocks
+    private PatientController subject;
+    @Mock
+    private PatientService patientService;
+    @Mock
+    private AuditLoggingService auditLoggingService;
+    @Mock
+    private DtoMapper dtoMapper;
+    @Mock
+    private CustomUserClient customUserClient;
 
+    @Test
+    public void createPatient_success_201() {
+        CreatePatientRequest request = new CreatePatientRequest();
+        request.setPatient(Optional.of(new PatientDto()));
 
-  @Test
-  public void getPatientList_success_201() {
-    // Arrange
-    CreatePatientRequest request = new CreatePatientRequest();
-    request.setPatient(new PatientDto());
+        Mockito.when(dtoMapper.mapPatientDto(request.getPatient().get())).thenReturn(PatientModel.builder().build());
 
-    PatientModel patientModel = new PatientModel();
-    Mockito.when(patientService.getPatients(Mockito.anyString())).thenReturn(List.of(patientModel));
+        subject.createPatient(request);
+    }
 
-    PatientDto patientDto = new PatientDto();
-    Mockito.when(dtoMapper.mapPatientModel(patientModel)).thenReturn(patientDto);
+    @Test
+    public void createPatient_error() throws Exception {
+        CreatePatientRequest request = new CreatePatientRequest();
+        request.setPatient(Optional.of(new PatientDto()));
 
-    // Act
-    PatientListResponse result = subject.getPatientList();
+        PatientModel patientModel = PatientModel.builder().build();
+        Mockito.when(dtoMapper.mapPatientDto(request.getPatient().get())).thenReturn(patientModel);
 
-    // Assert
-    //assertEquals(HttpStatus.CREATED, result.getStatusCode());
-    assertEquals(1, result.getPatients().size());
-    assertEquals(patientDto, result.getPatients().get(0));
-  }
+        Mockito.doThrow(ServiceException.class).when(patientService).createPatient(patientModel);
 
-  @Test
-  public void createPatient_success_201() {
-    // Arrange
-    CreatePatientRequest request = new CreatePatientRequest();
-    request.setPatient(new PatientDto());
+        assertThrows(InternalServerErrorException.class, () -> subject.createPatient(request));
+    }
 
-    Mockito.when(dtoMapper.mapPatientDto(request.getPatient())).thenReturn(new PatientModel());
+    @Test
+    public void getPatient_error_notExist() throws ServiceException {
+        Mockito.when(patientService.getPatient(Mockito.any(CPR.class))).thenReturn(null);
+        Exception e = assertThrows(ResourceNotFoundException.class, () -> subject.getPatient(Mockito.anyString()));
+    }
 
-    // Act
-    subject.createPatient(request);
+    @Test
+    public void getPatient_success_201() throws ServiceException {
+        PatientModel patientModel = PatientModel.builder().build();
+        Mockito.when(patientService.getPatient(Mockito.any(CPR.class))).thenReturn(patientModel);
 
-    // Assert
-    //assertEquals(HttpStatus.CREATED, result.getStatusCode());
-  }
+        PatientDto patientDto = new PatientDto();
+        Mockito.when(dtoMapper.mapPatientModel(patientModel)).thenReturn(patientDto);
 
-  @Test
-  public void createPatient_error() throws Exception {
-    // Arrange
-    CreatePatientRequest request = new CreatePatientRequest();
-    request.setPatient(new PatientDto());
+        PatientDto result = subject.getPatient(CPR_1.toString()).getBody();
 
-    PatientModel patientModel = new PatientModel();
-    Mockito.when(dtoMapper.mapPatientDto(request.getPatient())).thenReturn(patientModel);
+        assertEquals(patientDto, result);
+    }
 
-    Mockito.doThrow(ServiceException.class).when(patientService).createPatient(patientModel);
+    @Test
+    public void searchPatient() throws ServiceException, AccessValidationException {
+        PatientModel patientModel = PatientModel.builder().build();
 
-    // Act
+        PatientDto patientDto = new PatientDto();
+        Mockito.when(dtoMapper.mapPatientModel(patientModel)).thenReturn(patientDto);
+        String searchString = "searchString";
+        Mockito.when(patientService.searchPatients(List.of(searchString))).thenReturn(List.of(patientModel));
+        PatientListResponse result = subject.searchPatients(searchString).getBody();
 
-    // Assert
-    assertThrows(InternalServerErrorException.class, () -> subject.createPatient(request));
-  }
-
-  @Test
-  public void getPatient_error_notExist() throws ServiceException {
-    // Arrange
-    Mockito.when(patientService.getPatient(Mockito.anyString())).thenReturn(null);
-    // Act
-
-    // Assert
-    Exception e = assertThrows(ResourceNotFoundException.class, () -> subject.getPatient(Mockito.anyString()));
-  }
-
-  @Test
-  public void getPatient_success_201() throws ServiceException {
-    // Arrange
-    PatientModel patientModel = new PatientModel();
-    Mockito.when(patientService.getPatient(Mockito.anyString())).thenReturn(patientModel);
-
-    PatientDto patientDto = new PatientDto();
-    Mockito.when(dtoMapper.mapPatientModel(patientModel)).thenReturn(patientDto);
-
-    // Act
-    PatientDto result = subject.getPatient(Mockito.anyString());
-
-    // Assert
-    //assertEquals(HttpStatus.CREATED, result.getStatusCode());
-    assertEquals(patientDto, result);
-  }
-
-  @Test
-  public void searchPatient() throws ServiceException {
-    // Arrange
-    PatientModel patientModel = new PatientModel();
-    Mockito.when(patientService.searchPatients(Mockito.anyList())).thenReturn(List.of(patientModel));
-    //Mockito.doReturn(List.of(patientModel)).when(patientService).searchPatients(List.of(Mockito.anyString()));
-
-    PatientDto patientDto = new PatientDto();
-    Mockito.when(dtoMapper.mapPatientModel(patientModel)).thenReturn(patientDto);
-
-    // Act
-    PatientListResponse result = subject.searchPatients(Mockito.anyString());
-
-    // Assert
-    //assertEquals(HttpStatus.CREATED, result.getStatusCode());
-    assertEquals(1, result.getPatients().size());
-    assertEquals(patientDto, result.getPatients().get(0));
-  }
+        assertEquals(1, Objects.requireNonNull(result).getPatients().size());
+        assertEquals(patientDto, result.getPatients().getFirst());
+    }
 }
